--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-sass": "~0.8.1",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "cli-color": "*",
+    "execSync": "*"
   },
   "apps": [{
   	"name": "Bookmarks",
