--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "SARAH",
   "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/stevenharradine/SARAH-framework.git"
+  },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-sass": "~0.8.1",
