update paths to new repos

--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   },{
     "name": "Settings",
     "git": "https://github.com/stevenharradine/SARAH-Settings.git",
-    "path": "SARAH-Settings.git"
+    "path": "SARAH-Settings"
   }]
 }
