--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "url": "https://github.com/stevenharradine/SARAH-framework.git"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-sass": "~0.8.1",
-    "grunt-contrib-watch": "~0.6.1",
+    "grunt": "*",
+    "grunt-contrib-sass": "*",
+    "grunt-contrib-watch": "*",
     "cli-color": "*",
     "execSync": "*"
   },
