--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"DB_ADDRESS" : "192.168.2.131",
+	"DB_ADDRESS" : "localhost",
 	"DB_PORT" : "3306",
 	"DB_USER" : "douglas",
 	"DB_PASS" : "fargo",
